# 3DPool

./: .gitignore  3dpool  AIPlayer.cpp  AIPlayer.h  Ball.cpp  Ball.h  BaseApplication.cpp  BaseApplication.h  BulletContactCallback.h  Component.cpp  Component.h  ComponentNotFoundException.cpp  ComponentNotFoundException.h  Enums.h  Final_Project_Report.md  GUIManager.cpp  GUIManager.h  GameObject.cpp  GameObject.h  GraphicsComponent.cpp  GraphicsComponent.h  Implementation_plan.md  Makefile  Makefile.am  Makefile.in  ManualPlayer.cpp  ManualPlayer.h  NetworkPlayer.cpp  NetworkPlayer.h  OgreMotionState.cpp  OgreMotionState.h  PITCHME.md  PhysicsComponent.cpp  PhysicsComponent.h  Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h  Pocket.cpp  Pocket.h  (+27 more)
.deps/: 3dpool-Ball.Po  3dpool-BaseApplication.Po  3dpool-ControlListener.Po  3dpool-GameObject.Po  3dpool-Overlay.Po  3dpool-Player.Po  3dpool-PlayerCamera.Po  3dpool-PlayingField.Po  3dpool-Simulator.Po  3dpool-ThreeDPool.Po  3dpool-Wall.Po  ThreeDPool-Ball.Po  ThreeDPool-BaseApplication.Po  ThreeDPool-ControlListener.Po  ThreeDPool-GameObject.Po  ThreeDPool-Overlay.Po  ThreeDPool-Player.Po  ThreeDPool-PlayerCamera.Po  ThreeDPool-PlayingField.Po  ThreeDPool-Simulator.Po  ThreeDPool-Stick.Po  ThreeDPool-ThreeDPool.Po  ThreeDPool-Wall.Po
BlueBall/: RedSolid.material
PoolBallArt/: Ball December.scene  Ball1.material  Ball10.material  Ball11.material  Ball12.material  Ball13.material  Ball14.material  Ball15.material  Ball2.material  Ball3.material  Ball4.material  Ball5.material  Ball6.material  Ball7.material  Ball8.material  Ball9.material  BlenderSphere2.mesh  Material.003.material  Pool Stick.scene  PoolStick.material  PoolStick.mesh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
blender_art/: blue pool ball.blend  blue pool ball.blend1
material/: Example.material
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
nbproject/private/: private.xml
particle/: Examples.particle
