AC_INIT(configure.ac)
AM_INIT_AUTOMAKE(3DPool, 0.8)
AM_CONFIG_HEADER(config.h)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AX_CHECK_COMPILE_FLAG([-std=c++0x], [CXXFLAGS="$CXXFLAGS -std=c++0x"])

PKG_CHECK_MODULES(OGRE, [OGRE >= 1.2])
AC_SUBST(OGRE_CFLAGS)
AC_SUBST(OGRE_LIBS)

PKG_CHECK_MODULES(OIS, [OIS >= 1.0])
AC_SUBST(OIS_CFLAGS)
AC_SUBST(OIS_LIBS)

PKG_CHECK_MODULES(bullet, [bullet >= 2.79])
AC_SUBST(bullet_CFLAGS)
AC_SUBST(bullet_LIBS)

PKG_CHECK_MODULES(CEGUI_0_OGRE, [CEGUI-0-OGRE >= 0.8.7])
AC_SUBST(CEGUI_CFLAGS)
AC_SUBST(CEGUI_LIBS)

PKG_CHECK_MODULES(SDL, [sdl >= 1.2])
AC_SUBST(SDL_CFLAGS)
AC_SUBST(SDL_LIBS)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
